--- a/Animation/Base.lproj/Main.storyboard
+++ b/Animation/Base.lproj/Main.storyboard
@@ -1,25 +1,89 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Animation" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="voF-kv-aJ6">
+                                <rect key="frame" x="20" y="284" width="100" height="100"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.85882352939999995" green="0.89019607840000003" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Zws-yE-bMG"/>
+                                    <constraint firstAttribute="width" constant="100" id="vD4-Ia-KTe"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p2S-Zr-Fhi">
+                                <rect key="frame" x="255" y="284" width="100" height="100"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.85882352939999995" green="0.89019607840000003" blue="0.91372549020000005" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="JkR-Sg-i0S"/>
+                                    <constraint firstAttribute="height" constant="100" id="tz5-13-lAU"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UiE-iB-8Fh">
+                                <rect key="frame" x="30" y="294" width="80" height="80"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.97647058819999999" green="0.73725490199999999" blue="0.12549019610000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="UHM-ES-EGo"/>
+                                    <constraint firstAttribute="width" constant="80" id="dUr-GG-06a"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VcP-yQ-qwz">
+                                <rect key="frame" x="96" y="537" width="183" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Move Orange Color View!!!"/>
+                                <connections>
+                                    <action selector="pressButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x8X-Nk-IDd"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Before" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBl-e6-6B6">
+                                <rect key="frame" x="162" y="168" width="51" height="21"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="UiE-iB-8Fh" firstAttribute="centerY" secondItem="voF-kv-aJ6" secondAttribute="centerY" id="ENF-cB-oCC"/>
+                            <constraint firstItem="voF-kv-aJ6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HIv-mU-BFl"/>
+                            <constraint firstItem="p2S-Zr-Fhi" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="HP6-px-agw"/>
+                            <constraint firstAttribute="trailing" secondItem="p2S-Zr-Fhi" secondAttribute="trailing" constant="20" id="Sme-o4-0DF"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="VcP-yQ-qwz" secondAttribute="bottom" constant="100" id="gwi-qU-nfH"/>
+                            <constraint firstItem="VcP-yQ-qwz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lJW-R8-cMD"/>
+                            <constraint firstItem="UiE-iB-8Fh" firstAttribute="centerX" secondItem="voF-kv-aJ6" secondAttribute="centerX" id="oHM-0p-izy"/>
+                            <constraint firstItem="voF-kv-aJ6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="rSp-lh-7ZU"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="orangeColorView" destination="UiE-iB-8Fh" id="jfS-Bs-btW"/>
+                        <outlet property="positionViewLeft" destination="voF-kv-aJ6" id="8N1-BR-AH4"/>
+                        <outlet property="positionViewRight" destination="p2S-Zr-Fhi" id="mwe-Ht-rz5"/>
+                        <outlet property="textLabel" destination="FBl-e6-6B6" id="CF6-o6-acV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="322.5" y="298.5"/>
         </scene>
     </scenes>
 </document>
